# subject-interface-v1

./: 404.html  README.md  index.html  mkdocs.yml  openapi-downscoped.yml  openapi.yml  requirements.txt  sitemap.xml
.github/workflows/: deploy.yml
api-endpoints/: index.html
api-endpoints/authorization-management/: index.html
api-endpoints/authorization-token-management/: index.html
api-endpoints/session-logging/: index.html
api-endpoints/session-management/: index.html
api-endpoints/tlc-registration/: index.html
api-reference/: index.html
appendix/evolution-terminology/: index.html
architecture/: index.html
architecture/core-concepts/: index.html
architecture/security-framework/: index.html
architecture/system-architecture/: index.html
docs/: api-reference.md  index.md  openapi.yml
docs/api-endpoints/: index.md
docs/appendix/: evolution-terminology.md
docs/architecture/: core-concepts.md  index.md  security-framework.md  system-architecture.md
docs/examples/: index.md
docs/introduction/: communication-patterns.md
docs/tcp-streaming-protocol/: communication-modes.md  connection-management.md  datagram-types.md  index.md  protocol-enforcement.md  protocol-fundamentals.md
examples/: index.html
examples/multiplex/rust/: Cargo.toml  Dockerfile  README.md  example.sh  main.rs
introduction/communication-patterns/: index.html
introduction/evolution-terminology/: index.html
introduction/real-world-deployment/: index.html
overview/: index.html
search/: search_index.json
tcp-streaming-protocol/: index.html
(+37 files in other folders)
